--- a/day3/day3.ipynb
+++ b/day3/day3.ipynb
@@ -46,10 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 389,
    "outputs": [],
    "source": [
-    "def calc_power(file):\n",
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class Diagnostic:\n",
+    "    gamma_str: str\n",
+    "    epsilon_str: str\n",
+    "\n",
+    "def load_diagnostic(file):\n",
     "    counts = []\n",
     "    file_length = 0\n",
     "    with open(file) as f:\n",
@@ -65,14 +72,8 @@
     "    for char in counts:\n",
     "        gamma_chars.append(str(int(int(char)>file_length/2)))\n",
     "        epsilon_chars.append(str(int(int(char)<file_length/2)))\n",
-    "    gamma_str = ''.join(gamma_chars)\n",
-    "    gamma = int(gamma_str, base=2)\n",
-    "    print(gamma)\n",
     "\n",
-    "    epsilon_str = ''.join(epsilon_chars)\n",
-    "    epsilon = int(epsilon_str, base=2)\n",
-    "    print(epsilon)\n",
-    "    print(gamma * epsilon)"
+    "    return Diagnostic(''.join(gamma_chars), ''.join(epsilon_chars))"
    ],
    "metadata": {
     "collapsed": false,
@@ -83,12 +84,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 390,
+   "outputs": [],
+   "source": [
+    "def calc_gamma(diagnostic: Diagnostic):\n",
+    "    return int(diagnostic.gamma_str, base=2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 391,
+   "outputs": [],
+   "source": [
+    "def calc_epsilon(diagnostic: Diagnostic):\n",
+    "    return int(diagnostic.epsilon_str, base=2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 392,
+   "outputs": [],
+   "source": [
+    "def calc_power(diagnostic:Diagnostic):\n",
+    "    return calc_gamma(diagnostic) * calc_epsilon(diagnostic)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 393,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Diagnostic(gamma_str='10110', epsilon_str='01001')\n",
       "22\n",
       "9\n",
       "198\n"
@@ -96,7 +143,11 @@
     }
    ],
    "source": [
-    "calc_power('day3.test1')"
+    "d = load_diagnostic('day3.test1')\n",
+    "print(d)\n",
+    "print(calc_gamma(d))\n",
+    "print(calc_epsilon(d))\n",
+    "print(calc_power(d))"
    ],
    "metadata": {
     "collapsed": false,
@@ -107,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 394,
    "outputs": [
     {
      "name": "stdout",
@@ -120,7 +171,146 @@
     }
    ],
    "source": [
-    "calc_power('day3.input')\n"
+    "d = load_diagnostic('day3.input')\n",
+    "print(calc_gamma(d))\n",
+    "print(calc_epsilon(d))\n",
+    "print(calc_power(d))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "--- Part Two ---\n",
+    "Next, you should verify the life support rating, which can be determined by multiplying the oxygen generator rating by the CO2 scrubber rating.\n",
+    "\n",
+    "Both the oxygen generator rating and the CO2 scrubber rating are values that can be found in your diagnostic report - finding them is the tricky part. Both values are located using a similar process that involves filtering out values until only one remains. Before searching for either rating value, start with the full list of binary numbers from your diagnostic report and consider just the first bit of those numbers. Then:\n",
+    "\n",
+    "Keep only numbers selected by the bit criteria for the type of rating value for which you are searching. Discard numbers which do not match the bit criteria.\n",
+    "If you only have one number left, stop; this is the rating value for which you are searching.\n",
+    "Otherwise, repeat the process, considering the next bit to the right.\n",
+    "The bit criteria depends on which type of rating value you want to find:\n",
+    "\n",
+    "To find oxygen generator rating, determine the most common value (0 or 1) in the current bit position, and keep only numbers with that bit in that position. If 0 and 1 are equally common, keep values with a 1 in the position being considered.\n",
+    "To find CO2 scrubber rating, determine the least common value (0 or 1) in the current bit position, and keep only numbers with that bit in that position. If 0 and 1 are equally common, keep values with a 0 in the position being considered.\n",
+    "For example, to determine the oxygen generator rating value using the same example diagnostic report from above:\n",
+    "\n",
+    "Start with all 12 numbers and consider only the first bit of each number. There are more 1 bits (7) than 0 bits (5), so keep only the 7 numbers with a 1 in the first position: 11110, 10110, 10111, 10101, 11100, 10000, and 11001.\n",
+    "Then, consider the second bit of the 7 remaining numbers: there are more 0 bits (4) than 1 bits (3), so keep only the 4 numbers with a 0 in the second position: 10110, 10111, 10101, and 10000.\n",
+    "In the third position, three of the four numbers have a 1, so keep those three: 10110, 10111, and 10101.\n",
+    "In the fourth position, two of the three numbers have a 1, so keep those two: 10110 and 10111.\n",
+    "In the fifth position, there are an equal number of 0 bits and 1 bits (one each). So, to find the oxygen generator rating, keep the number with a 1 in that position: 10111.\n",
+    "As there is only one number left, stop; the oxygen generator rating is 10111, or 23 in decimal.\n",
+    "Then, to determine the CO2 scrubber rating value from the same example above:\n",
+    "\n",
+    "Start again with all 12 numbers and consider only the first bit of each number. There are fewer 0 bits (5) than 1 bits (7), so keep only the 5 numbers with a 0 in the first position: 00100, 01111, 00111, 00010, and 01010.\n",
+    "Then, consider the second bit of the 5 remaining numbers: there are fewer 1 bits (2) than 0 bits (3), so keep only the 2 numbers with a 1 in the second position: 01111 and 01010.\n",
+    "In the third position, there are an equal number of 0 bits and 1 bits (one each). So, to find the CO2 scrubber rating, keep the number with a 0 in that position: 01010.\n",
+    "As there is only one number left, stop; the CO2 scrubber rating is 01010, or 10 in decimal.\n",
+    "Finally, to find the life support rating, multiply the oxygen generator rating (23) by the CO2 scrubber rating (10) to get 230.\n",
+    "\n",
+    "Use the binary numbers in your diagnostic report to calculate the oxygen generator rating and CO2 scrubber rating, then multiply them together. What is the life support rating of the submarine? (Be sure to represent your answer in decimal, not binary.)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 395,
+   "outputs": [],
+   "source": [
+    "def load_file(file):\n",
+    "    file_array = []\n",
+    "    with open(file) as f:\n",
+    "        for line in f:\n",
+    "            file_array.append(line.strip())\n",
+    "\n",
+    "    return file_array\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
+   "outputs": [],
+   "source": [
+    "def count(rows, col_index):\n",
+    "    _0_or_1 = 0\n",
+    "    for row in rows:\n",
+    "        if row[col_index]=='0':\n",
+    "            _0_or_1 -= 1\n",
+    "        else:\n",
+    "            _0_or_1 += 1\n",
+    "\n",
+    "    return _0_or_1\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 397,
+   "outputs": [],
+   "source": [
+    "rows = load_file('day3.input')\n",
+    "for index in range(len(rows[0])):\n",
+    "    if count(rows, index) >= 0:\n",
+    "        rows = list(filter(lambda row: row[index] == '1', rows))\n",
+    "    else:\n",
+    "        rows = list(filter(lambda row: row[index] == '0', rows))\n",
+    "\n",
+    "oxygen = int(''.join(rows[0]), base=2)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 398,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4273224\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows = load_file('day3.input')\n",
+    "for index in range(len(rows[0])):\n",
+    "    if len(rows)==1:\n",
+    "        break\n",
+    "    if count(rows, index) >= 0:\n",
+    "        rows = list(filter(lambda row: row[index] == '0', rows))\n",
+    "    else:\n",
+    "        rows = list(filter(lambda row: row[index] == '1', rows))\n",
+    "\n",
+    "co2_scrub = int(''.join(rows[0]), base=2)\n",
+    "\n",
+    "print(oxygen * co2_scrub)\n"
    ],
    "metadata": {
     "collapsed": false,
