--- a/day4/day4.ipynb
+++ b/day4/day4.ipynb
@@ -67,21 +67,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 131,
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from dataclasses import dataclass\n",
     "\n",
     "def load_bingo(file):\n",
     "    _instructions = []\n",
     "    _boards = []\n",
     "    _board = []\n",
+    "    _id = 0\n",
     "    with open(file) as f:\n",
     "        first_line = True\n",
     "        for line in f:\n",
     "            if line == '\\n':\n",
     "                if len(_board) != 0:\n",
-    "                    _boards.append(_board)\n",
+    "                    _boards.append(Board(_id, np.array(_board).astype(np.int32)))\n",
+    "                    _id+=1\n",
     "                _board = []\n",
     "            elif not first_line:\n",
     "                _board.append(line.strip().split())\n",
@@ -89,32 +92,51 @@
     "            if first_line:\n",
     "                _instructions = line.strip().split(',')\n",
     "                first_line = False\n",
-    "        _boards.append(_board)\n",
-    "    return np.array(_instructions).astype(np.int32), np.array(_boards).astype(np.int32)\n",
+    "        _boards.append(Board(_id, np.array(_board).astype(np.int32)))\n",
     "\n",
-    "def bingo(_instructions, _boards):\n",
-    "    for board in _boards:\n",
-    "        for row in board:\n",
+    "    return np.array(_instructions).astype(np.int32), _boards\n",
+    "\n",
+    "@dataclass\n",
+    "class Board:\n",
+    "    id: int\n",
+    "    board: np.ndarray\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        return self.id==other.id\n",
+    "\n",
+    "def bingo(_instructions, _boards, first_match=True):\n",
+    "    for _board in _boards:\n",
+    "        for row in _board.board:\n",
     "            matched = 0\n",
     "            for column in row:\n",
     "                if column in _instructions:\n",
     "                    matched+=1\n",
     "            if matched==len(row):\n",
-    "                print(board)\n",
-    "                return board\n",
+    "                if first_match:\n",
+    "                    return _board\n",
+    "                elif len(_boards)==1:\n",
+    "                    return _board\n",
+    "                else:\n",
+    "                    _boards.remove(_board)\n",
+    "                    return bingo(_instructions, _boards, False)\n",
     "\n",
-    "        for column in board.transpose():\n",
+    "        for column in _board.board.transpose():\n",
     "            matched = 0\n",
     "            for row in column:\n",
     "                if row in _instructions:\n",
     "                    matched+=1\n",
     "            if matched==len(column):\n",
-    "                print(board)\n",
-    "                return board\n",
+    "                if first_match:\n",
+    "                    return _board\n",
+    "                elif len(_boards)==1:\n",
+    "                    return _board\n",
+    "                else:\n",
+    "                    _boards.remove(_board)\n",
+    "                    return bingo(_instructions, _boards, False)\n",
     "\n",
     "def score(_instructions, _board):\n",
     "    unmarked = []\n",
-    "    for row in _board:\n",
+    "    for row in _board.board:\n",
     "        for column in row:\n",
     "            if column not in _instructions:\n",
     "                    unmarked.append(column)\n",
@@ -130,17 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 129,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[14 21 17 24  4]\n",
-      " [10 16 15  9 19]\n",
-      " [18  8 23 26 20]\n",
-      " [22 11 13  6  5]\n",
-      " [ 2  0 12  3  7]]\n",
+      "Board(id=2, board=array([[14, 21, 17, 24,  4],\n",
+      "       [10, 16, 15,  9, 19],\n",
+      "       [18,  8, 23, 26, 20],\n",
+      "       [22, 11, 13,  6,  5],\n",
+      "       [ 2,  0, 12,  3,  7]], dtype=int32))\n",
       "4512\n"
      ]
     }
@@ -151,6 +173,7 @@
     "for index in range(1, len(instructions)+1):\n",
     "    board = bingo(instructions[0:index], boards)\n",
     "    if not board is None:\n",
+    "        print(board)\n",
     "        score(instructions[0:index], board)\n",
     "        break"
    ],
@@ -163,17 +186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 105,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[78 18 42 48 14]\n",
-      " [ 4 95 87 64 32]\n",
-      " [13 10 72 90 46]\n",
-      " [68 16 57 80 77]\n",
-      " [50 69  5 63 96]]\n",
+      "Board(id=20, board=array([[78, 18, 42, 48, 14],\n",
+      "       [ 4, 95, 87, 64, 32],\n",
+      "       [13, 10, 72, 90, 46],\n",
+      "       [68, 16, 57, 80, 77],\n",
+      "       [50, 69,  5, 63, 96]], dtype=int32))\n",
       "12796\n"
      ]
     }
@@ -184,6 +207,94 @@
     "for index in range(1, len(instructions)+1):\n",
     "    board = bingo(instructions[0:index], boards)\n",
     "    if not board is None:\n",
+    "        print(board)\n",
+    "        score(instructions[0:index], board)\n",
+    "        break"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "--- Part Two ---\n",
+    "On the other hand, it might be wise to try a different strategy: let the giant squid win.\n",
+    "\n",
+    "You aren't sure how many bingo boards a giant squid could play at once, so rather than waste time counting its arms, the safe thing to do is to figure out which board will win last and choose that one. That way, no matter which boards it picks, it will win for sure.\n",
+    "\n",
+    "In the above example, the second board is the last to win, which happens after 13 is eventually called and its middle column is completely marked. If you were to keep playing until this point, the second board would have a sum of unmarked numbers equal to 148 for a final score of 148 * 13 = 1924.\n",
+    "\n",
+    "Figure out which board will win last. Once it wins, what would its final score be?"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Board(id=1, board=array([[ 3, 15,  0,  2, 22],\n",
+      "       [ 9, 18, 13, 17,  5],\n",
+      "       [19,  8,  7, 25, 23],\n",
+      "       [20, 11, 10, 24,  4],\n",
+      "       [14, 21, 16, 12,  6]], dtype=int32))\n",
+      "1924\n"
+     ]
+    }
+   ],
+   "source": [
+    "instructions, boards = load_bingo('day4.test1')\n",
+    "\n",
+    "for index in range(1, len(instructions)+1):\n",
+    "    board = bingo(instructions[0:index], boards, False)\n",
+    "    if not board is None:\n",
+    "        print(board)\n",
+    "        score(instructions[0:index], board)\n",
+    "        break"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Board(id=47, board=array([[ 6, 73, 93, 67, 18],\n",
+      "       [29, 33, 94, 24, 34],\n",
+      "       [57, 96, 27, 37, 60],\n",
+      "       [92, 88, 81, 12, 16],\n",
+      "       [49, 98, 30, 10, 72]], dtype=int32))\n",
+      "18063\n"
+     ]
+    }
+   ],
+   "source": [
+    "instructions, boards = load_bingo('day4.input')\n",
+    "\n",
+    "for index in range(1, len(instructions)+1):\n",
+    "    board = bingo(instructions[0:index], boards, False)\n",
+    "    if not board is None:\n",
+    "        print(board)\n",
     "        score(instructions[0:index], board)\n",
     "        break\n"
    ],
